testdata/baselines/reference/submodule/conformance/jsDeclarationsFunctionLikeClasses.errors.txt
referencer.js(4,12): error TS2749: 'Point' refers to a value, but is being used as a type here. Did you mean 'typeof Point'?
referencer.js(4,12): error TS8010: Type annotations can only be used in TypeScript files.
source.js(2,12): error TS8010: Type annotations can only be used in TypeScript files.
source.js(3,12): error TS8010: Type annotations can only be used in TypeScript files.
source.js(7,16): error TS2350: Only a void function can be called with the 'new' keyword.


==== source.js (3 errors) ====
    /**
     * @param {number} x
               ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     * @param {number} y
               ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     */
    export function Point(x, y) {
        if (!(this instanceof Point)) {
            return new Point(x, y);
                   ~~~~~~~~~~~~~~~
!!! error TS2350: Only a void function can be called with the 'new' keyword.
        }
        this.x = x;
        this.y = y;
    }
    
==== referencer.js (2 errors) ====
    import {Point} from "./source";
    
    /**
     * @param {Point} p
               ~~~~~
!!! error TS2749: 'Point' refers to a value, but is being used as a type here. Did you mean 'typeof Point'?
               ~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     */
    export function magnitude(p) {
        return Math.sqrt(p.x ** 2 + p.y ** 2);
    }
    